err/falcon-swagger-ui.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/falcon'...
Listing './lib/python3.5/site-packages/falcon/bench'...
Listing './lib/python3.5/site-packages/falcon/bench/dj'...
Listing './lib/python3.5/site-packages/falcon/bench/dj/dj'...
Listing './lib/python3.5/site-packages/falcon/bench/dj/hello'...
Listing './lib/python3.5/site-packages/falcon/bench/dj/hello/migrations'...
Listing './lib/python3.5/site-packages/falcon/bench/nuts'...
Listing './lib/python3.5/site-packages/falcon/bench/nuts/nuts'...
Listing './lib/python3.5/site-packages/falcon/bench/nuts/nuts/controllers'...
Listing './lib/python3.5/site-packages/falcon/bench/nuts/nuts/model'...
Listing './lib/python3.5/site-packages/falcon/bench/nuts/nuts/tests'...
Listing './lib/python3.5/site-packages/falcon/bench/queues'...
Listing './lib/python3.5/site-packages/falcon/cmd'...
Listing './lib/python3.5/site-packages/falcon/media'...
Listing './lib/python3.5/site-packages/falcon/media/validators'...
Listing './lib/python3.5/site-packages/falcon/routing'...
Listing './lib/python3.5/site-packages/falcon/testing'...
Listing './lib/python3.5/site-packages/falcon/util'...
Listing './lib/python3.5/site-packages/falcon-1.3.0.dist-info'...
Listing './lib/python3.5/site-packages/falcon_swagger_ui'...
Listing './lib/python3.5/site-packages/falcon_swagger_ui/dist'...
Listing './lib/python3.5/site-packages/falcon_swagger_ui/dist/css'...
Listing './lib/python3.5/site-packages/falcon_swagger_ui/dist/fonts'...
Listing './lib/python3.5/site-packages/falcon_swagger_ui/dist/images'...
Listing './lib/python3.5/site-packages/falcon_swagger_ui/dist/lang'...
Listing './lib/python3.5/site-packages/falcon_swagger_ui/dist/lib'...
Listing './lib/python3.5/site-packages/falcon_swagger_ui/templates'...
Listing './lib/python3.5/site-packages/falcon_swagger_ui-0.0.8.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_mimeparse-1.6.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
